--- a/src/index.html
+++ b/src/index.html
@@ -18,23 +18,23 @@
     let body = document.getElementById('body');
     body.addEventListener('click', () => {
         let article = document.createElement('article')
-        article.className = 'message';
+        article.classList = 'message';
         article.textContent = ('VANGEL');
 
         let article2 = document.createElement('article')
-        article2.className = 'message';
+        article2.classList = 'message';
         article2.textContent = ('VANGEL2');
 
         let article3 = document.createElement('article')
-        article3.className = 'message';
+        article3.classList = 'message';
         article3.textContent = ('VANGEL3');
 
         let article4 = document.createElement('article')
-        article4.className = 'message';
+        article4.classList = 'message';
         article4.textContent = ('VANGEL4');
 
         let article5 = document.createElement('article')
-        article5.className = 'message';
+        article5.classList = 'message';
         article5.textContent = ('VANGEL5');
 
         body.append(article, article2, article3, article4, article5);
